# TC397_ETH

./: .gitignore  Build.bat  README.md  compile_commands.json
BSW_Config/: TC397_BSW.Administrator.silent.dcusr  TC397_BSW.ZhuanZ（无密码）.silent.dcusr  TC397_BSW.dpa  TC397_BSW.fred.silent.dcusr
BSW_Config/Config/Developer/: DataTypes.arxml  Packages.arxml  PortInterfaces.arxml  TC397_BSW.dcf
BSW_Config/Config/ECUC/: TC397_BSW.ecuc.arxml  TC397_BSW_BswM_BswM_ecuc.arxml  TC397_BSW_ComM_ComM_ecuc.arxml  TC397_BSW_Com_Com_ecuc.arxml  TC397_BSW_Det_Det_ecuc.arxml  TC397_BSW_Dio_Dio_ecuc.arxml  TC397_BSW_EcuC_EcuC_ecuc.arxml  TC397_BSW_EcuM_EcuM_ecuc.arxml  TC397_BSW_EthIf_EthIf_ecuc.arxml  TC397_BSW_EthSM_EthSM_ecuc.arxml  TC397_BSW_EthTSyn_EthTSyn_ecuc.arxml  TC397_BSW_EthTrcv_EthTrcv_ecuc.arxml  TC397_BSW_Eth_Eth_ecuc.arxml  TC397_BSW_Irq_Irq_ecuc.arxml  TC397_BSW_McalLib_McalLib_ecuc.arxml  TC397_BSW_Mcu_Mcu_ecuc.arxml  TC397_BSW_Nm_Nm_ecuc.arxml  TC397_BSW_Os_Os_ecuc.arxml  TC397_BSW_PduR_PduR_ecuc.arxml  TC397_BSW_Port_Port_ecuc.arxml  TC397_BSW_ResourceM_ResourceM_ecuc.arxml  TC397_BSW_Rte_Rte_ecuc.arxml  TC397_BSW_SoAd_SoAd_ecuc.arxml  TC397_BSW_StbM_StbM_ecuc.arxml  TC397_BSW_TcpIp_TcpIp_ecuc.arxml  TC397_BSW_Uart_Uart_ecuc.arxml  TC397_BSW_UdpNm_UdpNm_ecuc.arxml  TC397_BSW_vBRS_vBRS_ecuc.arxml  TC397_BSW_vBaseEnv_vBaseEnv_ecuc.arxml  TC397_BSW_vLinkGen_vLinkGen_ecuc.arxml  TC397_BSW_vSet_vSet_ecuc.arxml
BSW_Config/Config/InternalBehavior/: BswM_ib_bswmd.arxml  ComM_ib_bswmd.arxml  Com_ib_bswmd.arxml  Det_ib_bswmd.arxml  Dio_ib_bswmd.arxml  EcuM_ib_bswmd.arxml  EthIf_ib_bswmd.arxml  EthSM_ib_bswmd.arxml  EthTSyn_ib_bswmd.arxml  EthTrcv_30_Tja1100_ib_bswmd.arxml  Eth_30_Tc3xx_ib_bswmd.arxml  Irq_ib_bswmd.arxml  McalLib_ib_bswmd.arxml  Mcu_ib_bswmd.arxml  Nm_ib_bswmd.arxml  PduR_ib_bswmd.arxml  Port_ib_bswmd.arxml  Rte_ib_bswmd.arxml  SoAd_ib_bswmd.arxml  StbM_ib_bswmd.arxml  TcpIp_ib_bswmd.arxml  Uart_ib_bswmd.arxml  UdpNm_ib_bswmd.arxml
BSW_Config/Config/McData/: McData.a2l  McDataExport.arxml  McData_Events.a2l
BSW_Config/Config/ServiceComponents/: BswM_swc.arxml  ComM_swc.arxml  Det_swc.arxml  EcuM_swc.arxml  Os_swc.arxml  StbM_swc.arxml
BSW_Config/Config/System/: FlatExtract.arxml  FlatMap.arxml
BSW_Config/Log/: SoAd_XMI21.xml  StbM_XMI21.xml  TcpIp_XMI21.xml
BSW_Config/Log/GenerationReport_202509011610/: GenerationReport.html
BSW_Config/Log/GenerationReport_202509011638/: GenerationReport.html
BSW_Config/Log/GenerationReport_202509011743/: GenerationReport.html
BSW_Config/Log/GenerationReport_202509020921/: GenerationReport.html
BSW_Config/Log/GenerationReport_202509021115/: GenerationReport.html
BSW_Config/Log/GenerationReport_202509041650/: GenerationReport.html
BSW_Config/Log/GenerationReport_202512141558/: GenerationReport.html
BSW_Config/Log/GenerationReport_202512141626/: GenerationReport.html
BSW_Config/Log/GenerationReport_202512141704/: GenerationReport.html
BSW_Config/Log/GenerationReport_202512141812/: GenerationReport.html
BSW_Config/Log/GenerationReport_202512141816/: GenerationReport.html
BSW_Config/Log/GenerationReport_202512202158/: GenerationReport.html
BSW_Config/Log/GenerationReport_202512202202/: GenerationReport.html
Mcal_config/.metadata/: .tresoslog
Mcal_config/TC397/: .project
Mcal_config/TC397/.prefs/: pref_general.xdm  preferences.xdm.bak
Mcal_config/TC397/config/: Crc.xdm  Dio.xdm  Dio.xdm.bak  Irq.xdm  Irq.xdm.bak  McalLib.xdm  Mcu.xdm  Mcu.xdm.bak  Port.xdm  ResourceM.xdm.bak  Uart.xdm
Mcal_config/TC397test/: .project
Mcal_config/TC397test/.prefs/: pref_general.xdm  preferences_renamed.xdm.old
Mcal_config/TC397test/config/: Dio.xdm  Irq.xdm  McalLib.xdm  Mcu.xdm  Port.xdm  ResourceM.xdm
TC39XX/: .cproject  .project  TC39XX.launch  TriBoard_TC39xB.cfg  tc397UDESTK.wsx
TC39XX/_02_CDD/: Cdd_Core0.c  Cdd_Core1.c  Cdd_Core2.c  Cdd_Core3.c  Cdd_Core4.c  Cdd_Core5.c  Cdd_Nm.c
TC39XX/_04_StartUp/: BrsMainStartup.c  BrsMain_Callout_Stubs.c
TOOLS/ADS/: .cproject  .project  tc39x.launch
TOOLS/CMake/: CMakeLists.txt  CMakePresets.json
TOOLS/CMake/toolchain/: toolchain_tasking.cmake
TOOLS/CMake/util/: select_target.cmake  select_toolchain.cmake
(+335 files in other folders)
